@startuml Animat
!theme hacker
skinparam classAttributeIconSize 0
hide empty members

'========================================================
' SCENE
'========================================================

class Scene{
    +canvas : HTMLCanvasElement
    +ctx : CanvasRenderingContext2D

    +mobjects : MobjectManager
    +selection : SelectionManager
    +animations : AnimationSystem
    +trackers : TrackerSystem
    +renderLoop : RenderLoop

    --
    +render()
    +update(dt)
    +dispose()
}

Scene *-- MobjectManager
Scene *-- SelectionManager
Scene *-- AnimationSystem
Scene *-- TrackerSystem
Scene *-- RenderLoop

'========================================================
' MOBJECTS
'========================================================

abstract class Mobject{

    +id : string
    +name : string

    +properties : ShapeProperty

    +propertyController : PropertyController

    +animations : AnimationProvider

    +trackerProvider : TrackerProvider

    --
    +beginRender(ctx)
    +endRender(ctx)

    +render(ctx)

    +contains(x,y)

    +update(dt)
}

class Circle
class Rectangle
class LatexText
class Group

Circle --|> Mobject
Rectangle --|> Mobject
LatexText --|> Mobject
Group --|> Mobject

Mobject *-- PropertyController
Mobject *-- AnimationProvider
Mobject *-- TrackerProvider

'========================================================
' MOBJECT TREE
'========================================================

class MobjectManager{

    +tree : MobjectTree

    +onAdd : Signal
    +onRemove : Signal
    +onTreeChanged : Signal

    --
    +add()
    +delete()
    +group()
    +ungroup()
}

class MobjectTree{

    +roots : MobjectNode[]

    --
    +bringForward()
    +sendBackward()
    +bringToFront()
    +sendToBack()
    +moveBefore()
    +moveAfter()
}

class MobjectNode{

    +mobject : Mobject

    +parent
    +children

    +visible
    +locked
    +selected
}

MobjectManager *-- MobjectTree
MobjectTree *-- MobjectNode
MobjectNode --> Mobject

'========================================================
' PROPERTY SYSTEM
'========================================================

class PropertyController{

    +properties

    --
    +getEntries()
}

interface BaseProperty{
    opacity
    position
    scale
}

interface ShapeProperty{
    color
    strokeColor
    strokeWidth
}

ShapeProperty --|> BaseProperty

PropertyController --> BaseProperty

'========================================================
' VALUE
'========================================================

class Value{
    +value
    +type
}

class Values{
    NumberValue
    BooleanValue
    StringValue
    VectorValue
}

Values --|> Value

'========================================================
' ANIMATION
'========================================================

class AnimationSystem{

    +animations

    +current

    +playing

    +reversed

    +onAnimationAdded : Signal

    --
    +play()
    +pause()
    +stop()
    +update(dt)
}

class Animation{

    +id
    +duration
    +progress

    --
    +seek()
    +update(dt)
}

AnimationSystem *-- Animation

class AnimationProvider
class AnimationRegistry

AnimationProvider --> AnimationRegistry

'========================================================
' TRACKERS
'========================================================

class TrackerSystem{

    +dependencyGraph

    --
    +addTracker()
    +deleteTracker()
    +connect()
    +deleteConnection()
    +evaluate()
}

class Tracker{

    +value

    +changed : Signal
}

class TrackerProvider

class TrackerConnectorRegistry

class DependencyGraph

TrackerSystem *-- DependencyGraph
TrackerSystem *-- Tracker

TrackerProvider --> TrackerConnectorRegistry

Mobject --> TrackerProvider

'========================================================
' SELECTION
'========================================================

class SelectionManager{

    +selected : Set<Mobject>

    +scene

    --
    +select()
    +unselect()
    +groupSelected()
}

Scene --> SelectionManager

'========================================================
' EVENTS
'========================================================

class Signal
class Connection

Signal *-- Connection

Tracker --> Signal
AnimationSystem --> Signal
MobjectManager --> Signal

'========================================================
' RENDER
'========================================================

class RenderLoop{

    --
    +start()
    +stop()
    +restart()
}

RenderLoop --> Scene

'========================================================
' REGISTRIES
'========================================================

class MobjectRegistry
class AnimationRegistry
class TrackerConnectorRegistry

@enduml